<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/first_input_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/gray_1"
                android:text="@string/first_name"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/last_input_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/gray_1"
                android:text="@string/last"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/gender_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/maleBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male" />

            <RadioButton
                android:id="@+id/femaleBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/birthday_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Birthday"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/birthday_input_1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_column="0"
                android:layout_weight="1"
                android:background="@color/gray_1"
                android:text="Birthday"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <Button
                android:id="@+id/selectBTN1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Select" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/address_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Address"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/address_input_2"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@color/gray_1"
                android:text="@string/Address"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/email_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/addddd"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/gray_1"
                android:text="@string/email"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I agree to Terms of Use" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="Register" />
        </TableRow>
    </TableLayout>
</LinearLayout>